# shopee_scraper

./: .gitignore  README.md  interview_test.md  plan.md  pyproject.toml  test.py  test_2.py
backend/: ai_ranker.py  database.py  main.py  scorer.py  scraper.py
frontend/: app.py
